# chiLife

./: .buildinfo  .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  README.md  alignments.html  chilife.html  examples.html  faqs.html  genindex.html  index.html  molsys.html  numba_utils.html  objects.inv  protein.html  protein_utils.html  py-modindex.html  pyproject.toml  rotamer_ensemble.html  rotamer_libraries.html  scoring.html  search.html  searchindex.js  setup.py  spin_label.html  utils.html
.doctrees/: alignments.doctree  chilife.doctree  environment.pickle  examples.doctree  faqs.doctree  index.doctree  molsys.doctree  numba_utils.doctree  protein.doctree  protein_utils.doctree  rotamer_ensemble.doctree  rotamer_libraries.doctree  scoring.doctree  spin_label.doctree  utils.doctree
.doctrees/gallery/: 01-Basic_Spin_Labeling.doctree  02-SDSL_Site_Screen.doctree  02-Simple_SDSL_site_pair_screen.doctree  03-Adding_Custom_Spin_Lables.doctree  03-SDSL_Site_Screen.doctree  04-Adding_custom_spin_labels.doctree  04-Repacking_with_MCMC_Sampling.doctree  05-Membrane_Docking.doctree  05-Repacking_with_MCMC_Sampling.doctree  06-Custom_Energy_Function.doctree  06-Membrane_Docking.doctree  07-Custom_Energy_Function.doctree  09-Bifunctional_Labels.doctree  10-Nucleic_acid_labels.doctree  11-Arbitrary_molecular_labels.doctree
.github/workflows/: PR_test.yml  commit_test.yml  pages.yml
ProEPR/: ProEPR.py  Protein.py  RotamerLibrary.py  SpinLabel.py  SpinLabelTraj.py  __init__.py  numba_utils.py  protein_utils.py  scoring.py
_sources/: chilife.rst.txt  examples.rst.txt  faqs.rst.txt  index.rst.txt  protein_utils.rst.txt  rotamer_ensemble.rst.txt  rotamer_libraries.rst.txt  spin_label.rst.txt
chiLife/: FluorLabel.py  Protein.py  RotamerEnsemble.py  RotamerLibrary.py  SpinLabel.py  SpinLabelTraj.py  __init__.py  chiLife.py  dRotamerEnsemble.py  dRotamerLibrary.py  dSpinLabel.py  io.py  numba_utils.py  protein_utils.py  scoring.py  superimpositions.py
chilife/: FluorLabel.py  IntrinsicLabel.py  Protein.py  ProteinIC.py  RotamerEnsemble.py  SpinLabel.py  SpinLabelTraj.py  Topology.py  __init__.py  alignment_methods.py  chiLife.py  chilife.py  dRotamerEnsemble.py  dSpinLabel.py  io.py  new_ProteinIC.py  numba_utils.py  protein_utils.py  scoring.py  superimpositions.py
examples/: 01-Basic Spin Labeling.ipynb  02-SDSL Site Screen.ipynb  03-Repacking with MCMC sampling.ipynb  06-Custom Third Party Energy Function.ipynb  07-Third Party Modeling with PyRosetta.ipynb  README.rst  fit_ensemble.py
gallery/: 01-Basic_Spin_Labeling.html  01-Basic_Spin_Labeling.ipynb  02-SDSL_Site_Screen.html  02-Simple_SDSL_site_pair_screen.html  02-Simple_SDSL_site_pair_screen.ipynb  03-Adding_Custom_Spin_Lables.html  03-Adding_Custom_Spin_Lables.ipynb  03-SDSL_Site_Screen.html  04-Adding_custom_spin_labels.html  04-Repacking_with_MCMC_Sampling.html  05-Membrane_Docking.html  05-Repacking_with_MCMC_Sampling.html  06-Custom_Energy_Function.html  06-Membrane_Docking.html  06-Membrane_Docking.ipynb  07-Custom_Energy_Function.html  07-Custom_Energy_Function.ipynb  09-Bifunctional_Labels.html  10-Nucleic_acid_labels.html  11-Arbitrary_molecular_labels.html
mplstyles/: ProEPR.mplstyle  chiLife.mplstyle
scripts/: oldProteinIC.py  update_rotlib.py
tests/: test_IntrinsicLabels.py  test_MathUtils.py  test_MolSys.py  test_MolSysIC.py  test_NumbaUtils.py  test_Offline.py  test_ProEPR.py  test_Protein.py  test_ProteinIC.py  test_ProteinUtils.py  test_RotamerEnsemble.py  test_RotamerLibrary.py  test_Scoring.py  test_SpinLabel.py  test_SpinLabelTraj.py  test_Topology.py  test_chiLife.py  test_dSpinLabel.py  test_io.py  test_newdRotEns.py  withsample.npz
(+461 files in other folders)
