[project]
name = "chilife"
description = 'A package for modeling non-canonical amino acid side chain ensembles.'
readme = 'README.md'
license= {name = 'GNU GPLv3', file = 'LICENSE'}
authors=[{name = 'Maxx Tessmer', email='mhtessmer@gmail.com'},
         {name = 'Stefan Stoll', email='stst@uw.edu'}]
keywords=['Spin-label', 'EPR', 'DEER', 'PELDOR', 'Side-chain']
dynamic = ["version"]
requires-python = ">= 3.8,<3.13"
dependencies = ['numpy>=1.23.0',
                'scipy>=1.6.3',
                'matplotlib>=3.3.4',
                'numba>=0.57.0',
                'mdanalysis>=2.0.0',
                'tqdm>=4.45.0',
                'pytest>=6.2.2',
                'memoization>=0.3.1',
                'igraph>=0.11.2',
                'rtoml>=0.9.0']

classifiers=['License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
             'Programming Language :: Python :: 3.8',
             'Programming Language :: Python :: 3.9',
             'Programming Language :: Python :: 3.10',
             'Programming Language :: Python :: 3.11',
             'Programming Language :: Python :: 3.12']

[project.urls]
homepage = 'https://github.com/StollLab/chiLife'
documentation = "https://stolllab.github.io/chiLife/"

[project.optional-dependencies]
smiles2residue = ["rdkit>=2023.9.6"]

[tool.setuptools]
script-files = ['scripts/update_rotlib.py', 'scripts/oldProteinIC.py']

[tool.setuptools.package-data]
chilife = ['data/*', 'data/*/*', 'data/*/*/*']

[tool.setuptools.dynamic]
version = {attr = "chilife.__version__"}

[build-system]
requires = ["setuptools", "matplotlib", "wheel"]
build-backend = "setuptools.build_meta"
